fix(checkbox): Disabled state colors in high contrast mode

--- a/packages/mdc-checkbox/_mixins.scss
+++ b/packages/mdc-checkbox/_mixins.scss
@@ -71,6 +71,15 @@ $mdc-checkbox-ripple-target: ".mdc-checkbox__ripple";
   @include mdc-checkbox-disabled-ink-color($mdc-checkbox-mark-color, $query: $query);
 
   @media screen and (-ms-high-contrast: active) {
+    @include mdc-checkbox-disabled-container-colors(
+      $unmarked-stroke-color: GrayText,
+      $unmarked-fill-color: transparent,
+      $marked-stroke-color: GrayText,
+      $marked-fill-color: transparent,
+      $query: $query
+    );
+    @include mdc-checkbox-disabled-ink-color(GrayText, $query: $query);
+
     .mdc-checkbox__mixedmark {
       @include mdc-feature-targets($feat-structure) {
         margin: 0 1px; // Extra horizontal space around mixedmark symbol.
